@startuml READBOOK

class Libro {
  - isbn : string
  - titulo : string
  - autor : string
  - cantidad : int
  + Libro()
  + Libro(isbn, titulo, autor, cantidad)
  + obtenerIsbn() : string
  + obtenerTitulo() : string
  + obtenerAutor() : string
  + obtenerCantidad() : int
  + establecerTitulo(titulo: string)
  + establecerAutor(autor: string)
  + establecerCantidad(cantidad: int)
  + mostrar() : void
  + disminuirStock(cantidad: int) : bool
  + aumentarStock(cantidad: int) : bool
}

class Usuario {
  - id : string
  - nombre : string
  - contrasenia : string
  - admin : bool
  + Usuario()
  + Usuario(id, nombre, contrasenia, admin)
  + obtenerId() : string
  + obtenerNombre() : string
  + obtenerContrasenia() : string
  + esAdmin() : bool
  + establecerNombre(nombre: string)
  + establecerContrasenia(contrasenia: string)
  + mostrar() : void
  + verificarContrasenia(contrasenia: string) : bool
}

class Prestamo {
  - idUsuario : string
  - isbn : string
  - cantidad : int
  - fechaPrestamo : string
  + Prestamo()
  + Prestamo(idUsuario, isbn, cantidad, fechaPrestamo)
  + obtenerIdUsuario() : string
  + obtenerIsbn() : string
  + obtenerCantidad() : int
  + obtenerFechaPrestamo() : string
  + establecerFechaPrestamo(fecha: string)
  + mostrar() : void
}

class Historial {
  - idUsuario : string
  - isbn : string
  - cantidad : int
  - fechaPrestamo : string
  - fechaDevolucion : string
  + Historial()
  + Historial(idUsuario, isbn, cantidad, fechaPrestamo, fechaDevolucion)
  + obtenerIdUsuario() : string
  + obtenerIsbn() : string
  + obtenerCantidad() : int
  + obtenerFechaPrestamo() : string
  + obtenerFechaDevolucion() : string
  + establecerFechaDevolucion(fecha: string)
  + mostrar() : void
}

class Biblioteca {
  - libros : vector<Libro>
  - usuarios : vector<Usuario>
  - prestamos : vector<Prestamo>
  - historial : vector<Historial>
  + Biblioteca()
  + obtenerLibros() : const vector<Libro>&
  + obtenerUsuarios() : const vector<Usuario>&
  + obtenerPrestamos() : const vector<Prestamo>&
  + obtenerHistorial() : const vector<Historial>&
  + buscarLibroPorIsbn(isbn: string) : int
  + agregarLibro(libro: Libro) : void
  + eliminarLibro(isbn: string) : bool
  + actualizarLibro(isbn: string, nuevoTitulo: string, nuevoAutor: string, nuevaCantidad: int) : bool
  + mostrarTodosLosLibros() : void
  + buscarLibros(consulta: string) : void
  + buscarUsuarioPorId(id: string) : int
  + agregarUsuario(usuario: Usuario) : void
  + eliminarUsuario(id: string) : bool
  + mostrarTodosLosUsuarios() : void
  + autenticarUsuario(id: string, contrasenia: string) : int
  + buscarPrestamo(idUsuario: string, isbn: string) : int
  + contarPrestamosUsuario(idUsuario: string) : int
  + crearPrestamo(idUsuario: string, isbn: string, fechaActual: string) : bool
  + devolverPrestamo(idUsuario: string, isbn: string, fechaActual: string, multa: int&) : bool
  + agregarHistorial(registro: Historial) : void
  + mostrarHistorialUsuario(idUsuario: string) : void
  + mostrarTodoElHistorial() : void
  + mostrarPrestamosActivos() : void
  + guardarEnArchivo() : void
  + cargarDesdeArchivo() : void
}

Biblioteca *-- "0..*" Libro : contiene
Biblioteca *-- "0..*" Usuario : contiene
Biblioteca *-- "0..*" Prestamo : contiene
Biblioteca *-- "0..*" Historial : contiene

Prestamo --> Usuario : idUsuario
Prestamo --> Libro : isbn

Historial --> Usuario : idUsuario
Historial --> Libro : isbn

@enduml